--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Eduject</string>
     <string name="compass_description">Compass image</string>
+    <string name="admob_app_id" translatable="false">ca-app-pub-5313477092955900~4440956080</string>
+    <string name="admob_interstitial_id" translatable="false">ca-app-pub-5313477092955900/8705851763</string>
 </resources>
